fix unable to clear custom fee schedule
Signed-off-by: Xin Li <xin@swirldslabs.com>